increased the Z-Index for banner page to make sure the progress bar goes behind whenever there is a Warning banner

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -9,13 +9,6 @@ p {
     color: #0056B3;
 }
 
-.modal-body {
-    color: var(--color-dark);
-    border: 1px solid #000000;
-    padding: 10px;
-    border-radius: 0 0 5px 5px;
-}
-
 .modal-style {
     position: absolute;
     top: 50%;
@@ -27,5 +20,20 @@ p {
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
+    z-index: 1001; /* Higher z-index to ensure it appears above other elements */
+}
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000; /* Ensure overlay appears above other content */
+}
+
+.modal-content {
+    color: var(--color-dark);
+    padding: 10px;
+}
